using random name

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angularfire": "~0.7.1",
     "angular-route": "~1.2.20",
     "angular-mocks": "~1.2.20",
-    "valentine": "~2.1.0"
+    "valentine": "~2.1.0",
+    "angular-xml": "~1.0.2"
   },
   "devDependencies": {}
 }
